cpp/cwiczenie4/error_log.txt
main.cpp:26:9: error: ‘bufor’ does not name a type
   26 |         bufor << plik.rdbuf();
      |         ^~~~~
